--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Matériel Informatique Shop</h1>
+            <h1>MatEpsiInfo - Vente de matériel informatique</h1>
             <nav>
                 <ul>
                     <li><a href="#">Accueil</a></li>
@@ -44,7 +44,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Matériel Informatique Shop</p>
+            <p>&copy; 2023 MatEpsiInfo - Vente de matériel informatique</p>
         </div>
     </footer>
 </body>
