--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MatEpsiInfo - Vente de matériel informatique</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -12,10 +12,13 @@
             <h1>MatEpsiInfo - Vente de matériel informatique</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Produits</a></li>
-                    <li><a href="#">Panier</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="produits.html">Produits</a></li>
+                    <li><a href="panier.html">Panier</a></li>
                 </ul>
+                <div id="user-identification">
+                    <a href="authentification.html">S'identifier</a>
+                </div>
             </nav>
         </div>
     </header>
