--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MatEpsiInfo - Vente de matériel informatique</title>
+    <title>MatEpsiInfo</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .welcome-message {
+            text-align: center;
+            padding: 200px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,24 +30,10 @@
     </header>
 
     <main class="container">
-        <section class="products">
-            <article class="product">
-                <img src="images/product1.jpg" alt="Produit 1">
-                <h2>Produit 1</h2>
-                <p>Description du produit 1.</p>
-                <p class="price">$199.99</p>
-                <button>Ajouter au panier</button>
-            </article>
-
-            <article class="product">
-                <img src="images/product2.jpg" alt="Produit 2">
-                <h2>Produit 2</h2>
-                <p>Description du produit 2.</p>
-                <p class="price">$299.99</p>
-                <button>Ajouter au panier</button>
-            </article>
-
-            <!-- Ajoutez plus de produits ici -->
+        <section class="welcome-message">
+            <h2>Bienvenue chez MatEpsiInfo !</h2
+            <br><br>
+            <p>Merci de visiter notre site de vente de matériel informatique. Découvrez notre large gamme de produits de haute qualité.</p>
         </section>
     </main>
 
