Update index.html - ajout au menu d'authentification et de connexion
Update index.html - ajout au menu d'authentification et de connexion

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <li><a href="panier.html">Panier</a></li>
                 </ul>
                 <div id="user-identification">
-                    <a href="authentification.html">S'identifier</a>
+                    <a href="Authentification.html">S'identifier</a>
+                    <a href="Connexion.html">Se connecter</a>
                 </div>
             </nav>
         </div>
