Ajout des 2 hrefs
<a href="Authentification.html">Créer un compte</a>
<a href="Connexion.html">Se connecter</a>

--- a/Panier.html
+++ b/Panier.html
@@ -11,15 +11,17 @@
 <body>
     <header>
         <h1>Matériel Informatique Shop</h1>
+        
     </header>
-
-    <nav>
-        <a href="#">Accueil</a>
-        <a href="#">À Propos</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
-    </nav>
-
+    <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="produits.html">Produits</a></li>
+        <li><a href="panier.html">Panier</a></li>
+    </ul>
+    <div id="user-identification">
+        <a href="Authentification.html">Créer un compte</a>
+        <a href="Connexion.html">Se connecter</a>
+    </div>
     <div class="container">
         <h2>Voici votre Panier</h2>
         <p>Tous les éléments de votre Panier se trouvent ci-dessous</p>
