Changement style CSS pages
Changement style CSS pages

--- a/Connexion.html
+++ b/Connexion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'Authentification</title>
     <style>
-        body {
+           body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
@@ -29,6 +29,12 @@
             margin: 0 0 20px;
         }
 
+        .container form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         .container input {
             width: 100%;
             padding: 10px;
@@ -48,6 +54,11 @@
 
         .container button:hover {
             background-color: #0056b3;
+        }
+
+        .container a {
+            text-decoration: none;
+            color: #007bff;
         }
     </style>
 </head>
