--- a/Authentification.html
+++ b/Authentification.html
@@ -29,6 +29,12 @@
             margin: 0 0 20px;
         }
 
+        .container form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         .container input {
             width: 100%;
             padding: 10px;
