--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="panier.html">Panier</a></li>
                 </ul>
                 <div id="user-identification">
-                    <a href="authentification.html">S'identifier</a>
+                    <a href="inscription.php">S'identifier</a>
                 </div>
             </nav>
         </div>
