--- a/panier.html
+++ b/panier.html
@@ -19,8 +19,7 @@
         <li><a href="panier.html">Panier</a></li>
     </ul>
     <div id="user-identification">
-        <a href="Authentification.html">Créer un compte</a>
-        <a href="Connexion.html">Se connecter</a>
+        <a href="inscription.php">S'identifier</a>
     </div>
     <div class="container">
         <h2>Voici votre Panier</h2>
