--- a/produits.html
+++ b/produits.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MatEpsiInfo - Vente de matériel informatique</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_produits.css">
 </head>
 <body>
     <header>
